# Sparrow

./: .dockerignore  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  .swp  .travis-ci.yml  .travis.yml  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  Makefile  README.md  core-schema  docker-compose.base.yaml  docker-compose.certbot.yaml  docker-compose.development.yaml  docker-compose.production-overrides.yaml  docker-compose.production.yaml  docker-compose.testing-minimal.yaml  docker-compose.testing.yaml  docker-compose.yaml  get-sparrow.sh  nginx.conf  package-lock.json  package.json  poetry.toml  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  sparrow-config.sh.example  sparrow-version.json  sparrow-version.yaml  test.sh  webpack.config.js
_cli/: .gitignore  main.py  pyproject.toml  requirements.txt  sparrow  sparrow-dev-shim  sparrow.spec  test_cli.py
_cli/_scripts/: build-dist  build-docker-linux  build-local  install  install-poetry.py  test-cli
_cli/sparrow_cli/: __init__.py  __main__.py  _hacks.py  base.py  build.py  config_loader.py  containers.py  context.py  database.py  dev.py  docs.py  env.py  envbash.py  group.py  help.py  meta.py  test.py  test_lab.py  upgrade_database.py  util.py
_cli/sparrow_cli/commands/: __init__.py  attach.py  build.py  database.py  dev.py  docker.py  docs.py  info.py  logs.py  tasks.py  test.py  test_lab.py  up.py  update.py
_cli/sparrow_cli/config/: __init__.py  environment.py  file_loader.py  models.py  version_info.py
_cli/sparrow_cli/help/: __init__.py  backend.py  options_cache.py  util.py
_cli/sparrow_cli/release_generation/: __init__.py  check_consistency.py  check_validity.py  util.py
_cli/sparrow_cli/util/: __init__.py  command_groups.py  exceptions.py  formatting.py  shell.py
backend/: .dockerignore  Dockerfile  conftest.py  docker.cfg  notes.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
backend/__archive/: bib_json.py  flask_jwt_config.py
backend/__archive/importer/: test_importer.py
backend/__archive/map_endpoint/: __init__.py  geojson.sql
backend/__archive/schema-dump/: schema-dump.py
backend/__archive/sqlalchemy/: utils.py
backend/base-image/: Dockerfile  README.md  build-deps
backend/config/: docker.cfg
backend/core_plugins/: __init__.py  assets_server.py  data_file_server.py  init_sql.py
backend/core_plugins/cloud_data_store/: __init__.py
backend/core_plugins/destructive_operations/: __init__.py  remove-analytical-data.sql
backend/core_plugins/earthchem_vocabulary/: __init__.py  cli.py
backend/core_plugins/graphql/: __init__.py  filterable_query.py  schema.py
backend/core_plugins/import_data/: __init__.py
backend/core_plugins/location_names/: __init__.py
backend/core_plugins/project_edit/: __init__.py
backend/core_plugins/versioning/: __init__.py  drop-audit.sql  drop-old-audit-id.sql  start-logging.sql
backend/docker-scripts/: build-deps  run  run-tests  run-worker
backend/labdata/: __init__.py  app.py  database.py  default_config.py
backend/labdata/api/: __init__.py
backend/labdata/sql/: 04-populate-vocabulary.sql
backend/labdata/templates/: page.html
backend/loader/: Makefile  README.md  cache-database-map.py  pyproject.toml
backend/plugins/earthchem-vocabulary/: cli.py  populate-vocabulary.sql
backend/schema-dump/: schema-load.py
backend/sparrow/: __entry__.py  __init__.py  __main__.py  app.py  asgi.py  asgi_config.py  cli.py  context.py  database.py  default_config.py  encoders.py  exceptions.py  logs.py  meta.py  migrations.py  models.py  plugins.py  settings.py  sql  util.py  web.py
backend/sparrow/api/: __init__.py  api-help.yaml  api_info.py  base.py  core.py  endpoint.py  exceptions.py  fields.py  filters.py  response.py  schema.py  utils.py
backend/sparrow/app/: __init__.py  _legacy.py  base.py  default_config.py  flask.py  plugins.py
backend/sparrow/asgi/: __init__.py  base.py  config.py  entry.py
backend/sparrow/auth/: __init__.py  api.py  backend.py  context_middleware.py  create_user.py  test_auth.py
backend/sparrow/cli/: __init__.py  user.py  util.py
backend/sparrow/core/: __init__.py  __main__.py  logs.py  meta.py  migrations.py  util.py  web.py
backend/sparrow/cosmo_api/: __init__.py
backend/sparrow/database/: __init__.py  fixes.py  helpers.py  migration.py  migrations.py  models.py  postgresql.py  test_mapper.py  util.py
backend/sparrow/datasheet/: __init__.py  base.py  edits.py  queries.sql  utils.py  view.py
backend/sparrow/defs/: __init__.py
backend/sparrow/editors/: __init__.py  base.py
backend/sparrow/ext/: __init__.py  cloud_data.py  data_validation.py  heartbeat.py  pychron.py  pychron_repo.py
backend/sparrow/ext_plugins/: cloud_data.py
backend/sparrow/graph/: __init__.py  filterable_query.py  filters.py  schema.py  util.py
backend/sparrow/import_data/: __init__.py
backend/sparrow/import_helpers/: __init__.py  api.py  imperative_helpers.py  importer.py  util.py
backend/sparrow/interface/: __init__.py  cli.py  converter.py  display.py  fields.py  geometry.py  schema.py  util.py
backend/sparrow/loader/: __init__.py  converter.py  display.py  fields.py  schema.py  util.py
backend/sparrow/logs/: __init__.py  config.py
backend/sparrow_tests/: conftest.py  pytest.ini  test_api.py  test_api_filters.py  test_auth.py  test_data_file_api.py  test_database_init.py  test_database_methods.py  test_database_migrations.py  test_datafile_import.py  test_dz_import.py  test_import_interface.py  test_importer_api.py  test_model_post.py  test_open_search.py  test_plugins.py  test_project_edit.py  test_project_import.py  test_pychron_import.py  test_reimport.py  test_schema_updates.py  test_sims_import.py  test_tags.py
backend/sparrow_worker/: __init__.py
backend/tests/: __init__.py  conftest.py  helpers.py  large-test.json  pytest.ini  test_api.py  test_base.py  test_database_init.py  test_dz_import.py  test_import_interface.py  test_importer.py  test_pychron_import.py  wiscsims-test2.json
backend/utils/: setup.py
modules/output-schemas/: Makefile  README.md  pyproject.toml
(+1227 files in other folders)
