[tool.poetry]
name = "sparrow"
version = "0.1.0"
description = ""
authors = ["Daven Quinn <dev@davenquinn.com>"]
packages = [
  {include= "sparrow"},
  {include = "core_plugins"},
  {include = "sparrow_tests"},
  {include = "sparrow_worker"},
]

[tool.poetry.dependencies]
python = "^3.8"

# Preinstalled in 'sparrowdata/backend-base image'
# due to long compile times.
psycopg2 = "*"
shapely = "*"
lxml = "*"
numpy = "*"
pandas = "*"
uvloop = "*"

birdbrain = {path = "python-tools/birdbrain"}
"macrostrat.core_utils" = {path = "python-tools/core-utils"}
sadisplay = { git = "https://github.com/davenquinn/sadisplay.git", branch = "master" }
# Legacy application
Flask = "1.1.4"
Flask-RESTful = "0.3.7"
# https://serverfault.com/questions/1094062
# We have to pin Markupsafe to 2.0.1 for now.
markupsafe = 2.0.1

# Core application
migra = "3.0.1616366383"
sqlakeyset = "1.0.1616300210"
Pygments = "2.10.0"
SQLAlchemy = "1.4.7"
sqlalchemy-utils = "0.37.0"
sqlparse = "0.3.0"
requests = "2.22.0"
toposort = "1.5"

# Command-line interface
click = "7.1.2"
click-plugins = "1.1.1"
ipython = "7.27.0"

# Static files
aiofiles = "0.6.0"

# Import file reading
xlrd = "1.2.0"
pyyaml = "5.4"
beautifulsoup4 = "4.8.2"
html5lib = "1.0.1"
datefinder = "0.7.0"
pyarrow = "5.0.0"
openpyxl = "3.0.9"
uncertainties = "3.1.6" 

# Not sure why these were added,
# may be subdependencies of Click
# and Flask
pexpect = "4.8.0"
traitlets = "4.3.3"
werkzeug = "0.16.0"

# Serialization/deserialization
marshmallow = "3.11.1"
marshmallow-sqlalchemy = "0.24.2"
marshmallow-jsonschema = "0.10.0"
stringcase = "1.2.0"

# (De)serialization of geographic data
GeoAlchemy2 = "0.8.5"

# Prototype GraphQL API
Flask-GraphQL = "2.0.1"
graphene = "2.1.8"
graphene_sqlalchemy = "2.2.2"

# API version 2
webargs-starlette = "2.0.0"
apispec = "3.3.1"
starlette-apispec = "1.0.3"

# S3/AWS file access
boto3 = "1.12.25"

# Testing and logging
pytest = "6.2.5"
colorlog = "4.2.1"
rich = "10.9.0"
deepdiff = { version = "5.0.2", extras = [ "murmur" ] }
pytest-order = "0.9.5"

# Authentication
PyJWT = "1.7.1"

# ASGI
starlette = "0.13.4"
Hypercorn = "0.11.1"
asgiref = "3.2.8"


# Plugin Dependencies
crossrefapi = "1.5.0"

# sparrow_utils
# NOTE: we should probably organize these internal
# packages better...
# -e ./utils

# Task worker
celery = "5.1.1"
redis = "3.5.3"
broadcaster = { version = "0.2.0", extras = [ "redis" ] }
# For worker auto-reloading in development
watchdog = "2.1.2"
argh = "0.26.2"
pydantic = "1.8.2"

typer = "0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
