[tool.poetry]
name = "output-schemas"
version = "0.1.0"
description = ""
authors = ["Daven Quinn <dev@davenquinn.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
pydantic-to-typescript = "^1.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
